--- a/tfs-war/web/docente.xhtml
+++ b/tfs-war/web/docente.xhtml
@@ -25,7 +25,7 @@
 
         <p:dialog id="dDocente" 
                   widgetVar="dlgDocente" 
-                  modal="true"  closeOnEscape="true"
+                  modal="true"  closeOnEscape="true" position="top"
                   closable="true" resizable="false" >
             <f:facet name="header">
                 <h:outputText value="Gestión de Docente"/>
